--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,15 @@
     <script src="js/marked.min.js"></script>
     <script src="js/twitter.js"></script>
     <script src="js/page.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/1.3.2/twemoji.min.js"></script>
     <script type="text/javascript">
       // pluggable index api
       index = {}
       index.throwError = function(error) {
         console.log(error);
+      }
+      index.isDone = function() {
+        page.set("home");
       }
     </script>
 
@@ -182,7 +186,7 @@
         height: 0px;
         width:100%;
 
-        margin-top:30px;
+        margin-top:25px;
 
         overflow-y:scroll;
       }
@@ -194,6 +198,39 @@
       #home {
         margin:0;
         padding:0;
+      }
+
+      #login,
+      #pin {
+        margin-right:auto;
+        margin-left:auto;
+
+        max-width:300px;
+        width:100%;
+
+        text-align:center;
+      }
+
+      #login button,
+      #login input,
+      #pin button,
+      #pin input {
+        width:100%;
+      }
+
+      #pin input {
+        margin-top:40px;
+      }
+
+      .login-welcome {
+        margin-top:40px;
+      }
+
+      .login-subtext {
+        font-size:12px;
+        color:#95A5A6;
+
+        padding-bottom:20px;
       }
     </style>
   </head>
@@ -212,6 +249,24 @@
         <div class='loading'>
             <img src="img/load.gif" />
         </div>
+      </article>
+
+      <article id="login" style="display:none;">
+        <h1 class='login-welcome'>Welcome</h1>
+        <p class='login-subtext'>
+          Please enter your twitter @handle and you'll be redirected to a login page.
+          You will then get a token which you should paste in this application.
+        </p>
+
+        <input id='uner' type="text" placeholder='@handle'></input>
+        <br /><br />
+        <button onclick="doLogin($('#uner').val())" class="btn btn-success">Submit</button>
+      </article>
+
+      <article id="pin" style="display:none;">
+        <input id='pin_val' type="text" placeholder='pin'></input>
+        <br /><br />
+        <button onclick="doPin($('#pin_val').val())" class="btn btn-success">Submit</button>
       </article>
     </div>
   </body>
