--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <header>
       <div class="btn-tweet">Tweet</div>
 
-      <p id='lag-num' class='title'>title</title>
+      title
 
       <div class="btns">
         <div class="btn-close">&nbsp;</div>
