twitter: media & url entity support.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Nodeifcations (Nodewebkit+Desktop Notifications) -->
-    <script src="js/nodeifications.js"></script>
+    <script src="js/nodeifications.min.js"></script>
 
     <!-- Twitter/OAuth Libs -->
     <script src="js/jsOAuth-1.1.min.js"></script>
