nodeifications: include bootstrap & twimber.css on html template

--- a/src/nodeifications.html
+++ b/src/nodeifications.html
@@ -39,7 +39,9 @@
 				/*display:none;*/
 			/*}*/
 		</style>
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
+
+		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/twimber.css" />
 	</head>
 	<body style="-webkit-app-region: no-drag;">
         <div class="container">
