fix git reversal. Add meta charset = utf8

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Test Control Center</title>
 
+    <meta charset="utf-8">
+
     <!-- Allow bootstrap override, place after -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
