--- a/src/new-tweet.html
+++ b/src/new-tweet.html
@@ -4,6 +4,8 @@
     <title>New Tweet</title>
   </head>
 
+  <meta charset="utf-8">
+
   <!-- Allow bootstrap override, place after -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
