--- a/src/nodeifications.html
+++ b/src/nodeifications.html
@@ -2,7 +2,10 @@
 <html>
 	<head>
 		<title>Desktop Notification</title>
-    <link rel="stylesheet" href="app/bower_components/normalize-css/normalize.css"/>
+
+		<meta charset="utf-8">
+
+		<link rel="stylesheet" href="app/bower_components/normalize-css/normalize.css"/>
     <link rel="stylesheet" href="app/bower_components/open-sans-fontface/open-sans-custom.css"/>
     <link rel="stylesheet" href="app/notifications/nodeifications-shared.css"/>
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
